WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199849
Fix includes and make a constructor explicit to avoid unified-sources-triggered test failures
https://bugs.webkit.org/show_bug.cgi?id=199849
Summary
Fix includes and make a constructor explicit to avoid unified-sources-trigger...
Simon Fraser (smfr)
Reported
2019-07-16 20:54:17 PDT
Fix includes and make a constructor explicit to avoid unified-sources-triggered test failures
Attachments
Patch
(2.38 KB, patch)
2019-07-16 20:56 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-07-16 20:56:09 PDT
Created
attachment 374274
[details]
Patch
Daniel Bates
Comment 2
2019-07-16 21:09:19 PDT
Wow this bug (NOT YOUR PATCH) really makes me 😡. It makes me 😡 because of the fear of the unknown. How many yet undiscovered correctness issues are unified source causing? When you spend so much time fixing bugs only for weird bugs to be introduced by the build system that's next level bull....
WebKit Commit Bot
Comment 3
2019-07-16 21:56:42 PDT
Comment on
attachment 374274
[details]
Patch Clearing flags on attachment: 374274 Committed
r247504
: <
https://trac.webkit.org/changeset/247504
>
WebKit Commit Bot
Comment 4
2019-07-16 21:56:43 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-07-16 21:57:22 PDT
<
rdar://problem/53187799
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug