Fix includes and make a constructor explicit to avoid unified-sources-triggered test failures https://bugs.webkit.org/show_bug.cgi?id=199849

Reviewed by Wenson Hsieh.

webkit.org/b/199587 triggered some unexpected test failures because of unified sources include
order. The TextStream operator in ScrollingTreeOverflowScrollingNode::dumpProperties() was invoking
the implicit constructor of TransformOperations.

* page/scrolling/ScrollingTreeOverflowScrollingNode.cpp: Include TextStream.h
* platform/graphics/transforms/TransformOperations.h: Make ctor explicit.


Canonical link: https://commits.webkit.org/213726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247504 268f45cc-cd09-0410-ab3c-d52691b4dbfc